# AveryML

./: .gitignore  CLAUDE.md  Dockerfile  LICENSE  README.md  REPRODUCING.md  docker-compose.yml  pyproject.toml
averyml/: __init__.py  __main__.py  cli.py  dashboard.py
averyml/analysis/: compression.py  distributions.py  fork_lock.py  plotting.py  significance.py
averyml/config/: __init__.py  base.py  evaluation.py  experiment.py  search.py  synthesis.py  training.py
averyml/dashboard/: __init__.py  charts.py  state.py  tabs.py  theme.py
averyml/evaluation/: evaluator.py  metrics.py  results.py  sandbox.py
averyml/search/: cache.py  grid_search.py  temperature.py  tracker.py
averyml/synthesis/: dataset_writer.py  filters.py  sampler.py
averyml/training/: callbacks.py  data.py  trainer.py
averyml/utils/: io.py  logging.py  registry.py  tracking.py
configs/evaluation/: lcb_v5.yaml  lcb_v6.yaml
configs/experiments/: full_pipeline_qwen3_4b.yaml
configs/presets/: llama_8b_instruct.yaml  qwen3_30b_instruct.yaml  qwen3_4b_instruct.yaml  qwen3_4b_thinking.yaml
configs/search/: temperature_grid.yaml
configs/synthesis/: default.yaml
configs/training/: sft_instruct.yaml  sft_thinking.yaml
scripts/: reproduce_paper.sh  run_full_pipeline.sh  run_temperature_sweep.sh
tests/: conftest.py  test_dashboard.py
tests/test_analysis/: test_distributions.py  test_fork_lock.py  test_significance.py
tests/test_config/: test_configs.py
tests/test_evaluation/: test_evaluator.py  test_metrics.py  test_results.py  test_sandbox.py
tests/test_search/: test_grid_search.py
tests/test_synthesis/: test_backends.py  test_filters.py  test_sampler.py
(+20 files in other folders)
