[project]
name = "averyml"
version = "0.1.0"
description = "Production-grade Simple Self-Distillation (SSD) pipeline for improving LLM code generation"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [{name = "Avery ML Team"}]

dependencies = [
    "torch>=2.4.0",
    "transformers>=4.45.0",
    "datasets>=3.0.0",
    "huggingface-hub>=0.25.0",
    "pydantic>=2.6.0",
    "pyyaml>=6.0",
    "typer[all]>=0.12.0",
    "numpy>=1.26.0",
    "tqdm>=4.66.0",
    "pandas>=2.2.0",
]

[project.optional-dependencies]
vllm = [
    "vllm>=0.6.0",
]
training = [
    "accelerate>=0.34.0",
    "peft>=0.13.0",
    "trl>=0.12.0",
]
torchtune = [
    "torchtune>=0.4.0",
]
analysis = [
    "matplotlib>=3.9.0",
    "seaborn>=0.13.0",
    "scipy>=1.14.0",
]
tracking = [
    "wandb>=0.18.0",
]
eval = [
    "sentencepiece>=0.2.0",
    "scipy>=1.14.0",
]
dashboard = [
    "gradio>=4.0.0",
    "plotly>=5.18.0",
]
dev = [
    "pytest>=8.3.0",
    "pytest-cov>=5.0.0",
    "pytest-mock>=3.14.0",
    "ruff>=0.6.0",
    "mypy>=1.11.0",
]
all = [
    "averyml[vllm,training,torchtune,analysis,tracking,eval,dashboard,dev]",
]

[project.scripts]
averyml = "averyml.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["averyml"]

[tool.ruff]
line-length = 120
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"

[tool.mypy]
python_version = "3.10"
strict = false
warn_return_any = true
